# pyramid-ogcapi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.override.sample.yaml  docker-compose.yaml  jsonschema-gentypes.yaml  pyproject.toml  requirements.txt
.github/: ci-upgrade.yaml  renovate.json5
.github/workflows/: audit.yaml  dependency-auto-review.yaml  dependency-update-review.yaml  main.yaml
acceptance_tests/: application.ini  gunicorn.conf.py  ogcapi-features-schema.yaml  pyproject.toml  tests.ini
acceptance_tests/pyramid_ogcapi_test_app/: __init__.py  ogcapi_features.py
acceptance_tests/pyramid_ogcapi_test_app/ogcapi/: __init__.py
acceptance_tests/tests/: conftest.py  test_app.py
ci/: config.yaml  requirements.txt
pyramid_ogcapi/: __init__.py  links.py
pyramid_ogcapi/templates/: default.mako
