[tool.poetry]
name = "pyramid-ogcapi"
version = "0.0.0"
description = "Build pyramid routes, provide template for user html pages"
readme = "README.md"
authors = ["Stéphane Brunner <stephane.brunner@camptocamp.com>"]
repository = "https://github.com/camptocamp/pyramid-ogcapi"
license = "BSD-2-Clause"
keywords = ["ogcapi", "openapi", "pyramid"]
packages = [{ include = "pyramid_ogcapi" }]
include = ["pyramid_ogcapi/py.typed"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyramid-openapi3 = "0.16.0"
c2cwsgiutils = { version = "6.0.9", optional = true, extras = ["standard", "oauth2", "test_images"] }
pyramid-mako = "1.1.0"
openapi-core = "0.16.6"

[tool.poetry.group.dev.dependencies]
prospector = { extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"], version = "1.10.3" }
prospector-profile-duplicated = "1.1.0"
pytest = "8.0.2"
pytest-cov = "6.0.0"
WebTest = "3.0.3"
prospector-profile-utils = "1.20.2"

[tool.poetry.extras]
application = ["c2cwsgiutils"]


[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
